[tool.poetry]
name = "demo_orq_ai"
version = "0.1.0"
description = "A simple project setup for Streamlit with Poetry"
authors = ["Amelia <your_email@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = "^1.41.1"
orq-ai-sdk = "^3.0"
watchdog = "^6.0.0"

[tool.poetry.dev-dependencies]
black = "^23.0"
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
